tests/compile_fail/missing_strings_from_locales.rs
use i18n_codegen::i18n;

i18n!("../../../tests/compile_fail/missing_strings_from_locales");

fn main() {}
