tests/compile_fail/missing_strings_from_locales.stderr
error: proc macro panicked
 --> $DIR/missing_strings_from_locales.rs:3:1
  |
3 | i18n!("../../../tests/compile_fail/missing_strings_from_locales");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Some locales are missing keys
          `Da` is missing:
            `bar`
          
          `En` is missing:
            `foo`
